package facade;

/**
 * The class Cpu.
 * 电脑cpu
 *
 * @author GungnirLaevatain
 * @version 2019 -06-13 21:39:07
 * @since JDK 11
 */
public class Cpu {
    /**
     * Start.
     * 启动cpu
     *
     * @author GungnirLaevatain
     */
    public void start() {
        System.out.println("cpu start");
    }

    /**
     * Stop.
     * 停止cpu
     *
     * @author GungnirLaevatain
     */
    public void stop() {
        System.out.println("cpu stop");
    }
}
