package facade;

/**
 * The class Memory.
 * 内存
 *
 * @author GungnirLaevatain
 * @version 2019 -06-13 21:41:15
 * @since JDK 11
 */
public class Memory {
    /**
     * Start.
     * 启动内存
     *
     * @author GungnirLaevatain
     */
    public void start() {
        System.out.println("memory start");
    }

    /**
     * Stop.
     * 停止内存运行
     *
     * @author GungnirLaevatain
     */
    public void stop() {
        System.out.println("memory stop");
    }
}
