package facade;

/**
 * The class Disk.
 * 硬盘
 *
 * @author GungnirLaevatain
 * @version 2019 -06-13 21:41:07
 * @since JDK 11
 */
public class Disk {
    /**
     * Start.
     * 启动硬盘
     *
     * @author GungnirLaevatain
     */
    public void start() {
        System.out.println("disk start");
    }

    /**
     * Stop.
     * 停止硬盘运行
     *
     * @author GungnirLaevatain
     */
    public void stop() {
        System.out.println("disk stop");
    }
}
